Finalizada validación cruzada. Avanza #3

--- a/Regresion/california-regression.Rmd
+++ b/Regresion/california-regression.Rmd
@@ -300,7 +300,99 @@ fitknn1<-kknn(MedianHouseValue~., train, test)
 Una vez creado el modelo, podemos ver los valores si accedemos a *fitknn1$fitted.values*. Para ver manualmente el error podemos realizar lo siguiente:
 
 
+```{r}
+plot(test$MedianHouseValue~test$MedianIncome)
+points(test$MedianIncome, fitknn1$fitted.values, col="blue", pch=20)
+```
 
 
+Podemos ver como la prediccion se ajusta bastante bien sobre lo0s datos reales, por lo que graficamente hemos comprobado el funcionamiento del modelo. También podemos caluclar el valor del error, para ello:
 
+```{r}
+yprime<-fitknn1$fitted.values
+sqrt(sum((test$MedianHouseValue-yprime)^2)/length(yprime))
+```
+
+El resultado es algo mejor que el de nuestro modelo lineal múltiple. Pero quizá aún podamos mejorarlo realizando algún tipo de modificación sobre las variables independientes.
+
+
+```{r}
+fitknn2<-kknn(MedianHouseValue~.-HousingMedianAge, train, test)
+yprime<-fitknn2$fitted.values
+sqrt(sum((test$MedianHouseValue-yprime)^2)/length(yprime))
+```
+
+Hemos eliminado nuestra variable HousingMedianAge, del modelo, y parece que funciona un poco mejor. Con esto queda constatado, que aunque tengamos un buen modelo entre dos variables entre si, no se debe descartar la opción de probar que pasaría con los resultados si eliminamos una de ellas. 
+
+### Validación cruzada. 
+
+Para evitar que nuestro modelo sobre-entrene, vamnos a realizar un proceso de validacion cruzada. 
+
+```{r}
+setwd("~/Desktop/MASTER CIENCIA DE DATOS/introduccion-ciencia-datos/Regresion/datasets/5fold")
+nombre <- "california"
+run_lm_fold <- function(i, x, tt = "test") 
+{
+  file <- paste(x, "-5-", i, "tra.dat", sep="")
+  x_tra <- read.csv(file, comment.char="@") 
+  file <- paste(x, "-5-", i, "tst.dat", sep="")
+  x_tst <- read.csv(file, comment.char="@")
+  In <- length(names(x_tra)) - 1 
+  names(x_tra)[1:In] <- paste ("X", 1:In, sep="") 
+  names(x_tra)[In+1] <- "Y"
+  names(x_tst)[1:In] <- paste ("X", 1:In, sep="")
+  names(x_tst)[In+1] <- "Y"
+  if (tt == "train") 
+  {
+    test <- x_tra
+  } 
+  else
+  {
+    test <- x_tst
+  }
+  fitMulti=lm(Y~.,x_tra)
+  yprime=predict(fitMulti,test)
+  sum(abs(test$Y-yprime)^2)/length(yprime)
+}
+lmMSEtrain<-mean(sapply(1:5,run_lm_fold,nombre,"train")) 
+lmMSEtest<-mean(sapply(1:5,run_lm_fold,nombre,"test"))
+
+lmMSEtrain
+lmMSEtest
+```
+
+
+Ahora lo aplicaremos para el algoritmo KNN:
+
+```{r}
+setwd("~/Desktop/MASTER CIENCIA DE DATOS/introduccion-ciencia-datos/Regresion/datasets/5fold")
+nombre <- "california"
+run_knn_fold <- function(i, x, tt = "test") 
+{
+  file <- paste(x, "-5-", i, "tra.dat", sep="")
+  x_tra <- read.csv(file, comment.char="@") 
+  file <- paste(x, "-5-", i, "tst.dat", sep="")
+  x_tst <- read.csv(file, comment.char="@")
+  In <- length(names(x_tra)) - 1 
+  names(x_tra)[1:In] <- paste ("X", 1:In, sep="") 
+  names(x_tra)[In+1] <- "Y"
+  names(x_tst)[1:In] <- paste ("X", 1:In, sep="")
+  names(x_tst)[In+1] <- "Y"
+  if (tt == "train") 
+  {
+    test <- x_tra
+  } 
+  else
+  {
+    test <- x_tst
+  }
+  fitMulti=kknn(Y~.,x_tra,test)
+  yprime=fitMulti$fitted.values
+  sum(abs(test$Y-yprime)^2)/length(yprime)
+}
+knnMSEtrain<-mean(sapply(1:5,run_knn_fold,nombre,"train")) 
+knnMSEtest<-mean(sapply(1:5,run_knn_fold,nombre,"test"))
+knnMSEtrain
+knnMSEtest
+```
 
